add registration of widget function

--- a/src/components/app/app.component.html
+++ b/src/components/app/app.component.html
@@ -1,8 +1,9 @@
 <div class="container">
   <div class="page-header clearfix text-center">
     <h1 class="">Widgets</h1>
+    <p class="text-center">
+      <a md-mini-fab widget-add-widget-button><md-icon>add</md-icon></a>
+    </p>
   </div>
-  <ul>
-  </ul>
   <widgets [widgets]="widgets"></widgets>
 </div>
