added creating of widgets

--- a/src/components/widget/widget-loader.component.html
+++ b/src/components/widget/widget-loader.component.html
@@ -1,8 +1,8 @@
 
 <h3 class="widget__title">{{title}} 
     <span class="widget__actions">
-        <span class="widget__action widget__action-delete material-icons" (click)="onDeleteClicked($event)" title="Delete">delete</span>
-        <span class="widget__action widget__action-handle material-icons" title="Move">open_with</span>
+        <span class="widget__action widget__action-delete material-icons" (click)="onDeleteClicked($event)" mdTooltip="Delete">delete</span>
+        <span class="widget__action widget__action-handle material-icons" mdTooltip="Move">open_with</span>
     </span>
 </h3>
 <div class="widget__body">
