--- a/src/components/app/app.component.html
+++ b/src/components/app/app.component.html
@@ -1,9 +1,15 @@
 <div class="container">
-  <div class="page-header clearfix text-center">
-    <h1 class="">Widgets</h1>
-    <p class="text-center">
-      <a md-mini-fab widget-add-widget-button><md-icon>add</md-icon></a>
-    </p>
+  <div class="page-header">
+    <div class="row">
+      <div class="col-xs-8">
+        <h1>Widgets</h1>
+      </div>
+      <div class="col-xs-4">
+        <h1 class="text-right">
+          <a md-mini-fab widget-add-widget-button mdTooltip="Add New Widget"><md-icon>add</md-icon></a>
+        </h1>
+      </div>
+    </div>
   </div>
   <widgets [widgets]="widgets"></widgets>
 </div>
